k8s/api-facturas/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-facturas
  namespace: tributariapp
  labels:
    app: api-facturas
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: api-facturas
